--- a/css/introducao.css
+++ b/css/introducao.css
@@ -31,3 +31,33 @@
     font-size: 1.5rem;
     color: #525252;
 }
+
+@media (max-width: 1000px) {
+    .introduction {
+        font-size: 3rem;
+    }
+}
+
+@media (max-width: 800px) {
+    .introduction {
+        grid-template-columns: 1fr 1fr;
+        gap: 40px;
+    }
+    .introduction h1 {
+        font-size: 2rem;
+    }
+    .introduction h1::before {
+        width: 30px;
+        height: 10px;
+        left: 0px;
+    }
+}
+
+@media (max-width: 400px) {
+    .introduction {
+        grid-template-columns: 1fr;
+    }
+    .introduction img {
+        display: none;
+    }
+}
