--- a/css/global.css
+++ b/css/global.css
@@ -22,3 +22,11 @@ img {
     max-width: 100%;
     display: block;
 }
+
+.sub-title {
+    font-size: 8rem;
+    line-height: 1;
+    text-transform: uppercase;
+    max-width: 4ch;
+    word-break: break-all;
+}
