--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -16,6 +16,7 @@
 
 .company {
     display: grid;
+    gap: 10px 20px;
     grid-template-columns: 1fr 1fr;
     padding: 20px;
     background: #f5f5f5;
@@ -24,6 +25,50 @@
     position: relative;
 }
 
+.company::before {
+    content: '';
+    display: block;
+    width: 4px;
+    height: 20px;
+    background: linear-gradient(#b6f829, #67dd09);
+    position: absolute;
+    top: 20px;
+    left: -4px;
+}
+
 .company-year {
     position: absolute;
+    text-align: right;
+    width: 80px;
+    top: 22px;
+    left: -100px;
+    color: #525252;
+    font-size: 0.875rem;
+}
+
+.company-title {
+    font-size: 1.125rem;
+    line-height: 1.1;
+    font-weight: bold;
+}
+
+.company-text {
+    font-size: 0.875rem;
+    line-height: 1.4;
+    color: #525252;
+}
+
+.skills-company {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-content: start;
+}
+
+.skills-company li {
+    font-size: 0.875rem;
+    line-height: 1.4;
+    border-radius: 4px;
+    background: #fff;
+    padding: 5px 10px;
 }
