--- a/css/global.css
+++ b/css/global.css
@@ -23,6 +23,15 @@ img {
     display: block;
 }
 
+.container {
+    max-width: 1200px;
+    padding: 40px 20px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 4fr 8fr;
+    gap: 100px;
+}
+
 .sub-title {
     font-size: 8rem;
     line-height: 1;
