--- a/css/formation.css
+++ b/css/formation.css
@@ -34,3 +34,26 @@
     gap: 20px;
     margin-bottom: 60px;
 }
+
+.college {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    background: #000;
+    padding: 20px;
+    border-radius: 4px;
+}
+
+.college-type {
+    font-size: .875rem;
+    text-transform: uppercase;
+    color: #a3a3a3;
+    margin-bottom: 10px;
+}
+
+.college-course {
+    font-size: 1.125rem;
+    line-height: 1.4;
+    margin-bottom: 40px;
+    position: relative;
+}
