--- a/css/global.css
+++ b/css/global.css
@@ -44,6 +44,6 @@ img {
     .sub-title {
         font-size: 3rem;
         text-transform: capitalize;
-        max-width: initial;
+        max-width: initial !important;
     }
 }
