--- a/css/footer.css
+++ b/css/footer.css
@@ -20,7 +20,7 @@
 
 .footer-contact li {
     font-weight: bold;
-    font-size: 2.25rem;
+    font-size: 2.0rem;
     line-height: 1.1;
     color: #fff;
     margin-bottom: 30px;
@@ -34,6 +34,10 @@
     grid-column: 1 / -1;
     font-size: 1.125rem;
     color: #8f8f8f;
+}
+
+.footer-copy .color {
+    color: #9CFF2E;
 }
 
 @media (max-width: 800px) {
