--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Ubuntu:wght@400;500;700&display=swap');
+
 .header {
-    max-width: 1200px;
+    /*max-width: 1200px;*/
     /*guardar esses valores*/
-    padding: 40px 20px;
+    padding: 10px 20px;
     margin: 0 auto;
     /*guardar esses valores*/
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header-bg {
+    background: #2a2929;
+}
+
+.header .logo {
+    color: #fff;
+    font-size: 35px;
+    font-weight: 500;
+    font-family: 'Ubuntu', sans-serif;
+    padding-left: 30px;
+}
+
+.header .logo span {
+    color: #9CFF2E;
+    transition: all 0.3s ease;
 }
 
 .header-menu {
@@ -21,8 +40,13 @@
     line-height: 1.3;
     padding: 10px 20px;
     text-decoration: none;
-    color: #141414;
+    color: #FFFFFF;
     display: block;
+}
+
+.header-menu a:hover {
+    color: #9CFF2E;
+    transition: 0.3s ease;
 }
 
 @media (max-width: 800px) {
