--- a/css/introducao.css
+++ b/css/introducao.css
@@ -57,6 +57,10 @@
         height: 10px;
         left: 0px;
     }
+    .introduction .photo {
+        border-radius: 7px 40px;
+        display: block;
+    }
 }
 
 @media (max-width: 400px) {
